--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.6.0",
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
