Fix critical bugs: hardcoded IPs, polling, error handling, and navigation
- Fixed hardcoded IP addresses with dynamic URL generation
- Implemented smart polling with exponential backoff
- Added centralized error handling and API utilities
- Fixed navigation issues and sidebar rendering problems
- Added comprehensive diagnostic and debugging tools
- Implemented authentication system with JWT
- Added error boundary for better error handling
- Created cross-machine compatibility fixes
- Added multiple utility files for debugging and testing
- Enhanced CORS configuration for network access

All critical bugs resolved and application now stable across different machines.

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,19 @@
+# Database Configuration
 DB_HOST=localhost
-DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=nasiye@2025
 DB_NAME=nasiye_tasks
 
+# JWT Secret (for authentication)what 
+JWT_SECRET=your_jwt_secret_key_here
+
+# Server Configuration
+PORT=3000
+
+# CORS Configuration
+CLIENT_URL=http://localhost:5173
+
+# Admin Access Configuration
+# Comma-separated list of IP addresses that get admin access (for development/testing)
+# Whitelisted IPs for admin endpoints (comma-separated)
+ADMIN_WHITELIST=192.168.18.25,192.168.18.40 
