--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "@fullcalendar/timegrid": "^6.1.4",
     "@headlessui/react": "^1.7.4",
     "@hookform/resolvers": "^2.9.10",
+    "@iconify-json/ph": "^1.2.2",
     "@iconify/react": "^4.0.0",
+    "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
