--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "moment-timezone": "^0.6.0"
   }
 }
