--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/react": "^6.1.4",
     "@fullcalendar/timegrid": "^6.1.4",
     "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^2.9.10",
     "@iconify-json/ph": "^1.2.2",
     "@iconify/react": "^4.0.0",
