--- a/client/package.json
+++ b/client/package.json
@@ -76,6 +76,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
+    "vite": "^3.2.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -86,7 +87,6 @@
     "autoprefixer": "^10.4.13",
     "miragejs": "^0.1.47",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.3.2",
-    "vite": "^3.2.3"
+    "tailwindcss": "^3.3.2"
   }
 }
